--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11.16", features = ["blocking"] }
+rust_decimal = "1.29.1"
 select = "0.6.0"
 
